<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.marcusprado02.commons</groupId>
  <artifactId>commons</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Commons Platform</name>
  <description>Supreme shared commons for Java microservices</description>

  <modules>
    <module>commons-bom</module>
    <module>commons-parent</module>
    <module>commons-platform</module>

    <module>commons-kernel-core</module>
    <module>commons-kernel-ddd</module>
    <module>commons-kernel-errors</module>
    <module>commons-kernel-result</module>
    <module>commons-kernel-time</module>

    <module>commons-ports-persistence</module>
    <module>commons-ports-messaging</module>
    <module>commons-ports-http</module>
    <module>commons-ports-cache</module>
    <module>commons-ports-secrets</module>
    <module>commons-ports-files</module>

    <module>commons-testkit-core</module>
    <module>commons-archunit</module>
    <module>commons-quality</module>

    <module>commons-app-observability</module>
    <module>commons-app-resilience</module>
    <module>commons-app-outbox</module>
    <module>commons-app-idempotency</module>

    <module>commons-adapters-web</module>
    <module>commons-adapters-web-spring</module>
    <module>commons-adapters-web-spring-webflux</module>

    <module>commons-adapters-http-okhttp</module>
    <module>commons-adapters-http-webclient</module>

    <module>commons-adapters-messaging-kafka</module>

    <module>commons-adapters-otel</module>

    <module>commons-adapters-resilience4j</module>

    <module>commons-adapters-persistence-jpa</module>
    <module>commons-adapters-persistence-inmemory</module>

    <module>commons-spring-starter-observability</module>
    <module>commons-spring-starter-otel</module>
    <module>commons-spring-starter-resilience</module>
    <module>commons-spring-starter-outbox</module>
    <module>commons-spring-starter-idempotency</module>

  </modules>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>${java.version}</maven.compiler.release>
  </properties>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/marcusPrado02/java-commons</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <!-- Source JAR -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- Javadoc JAR -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.6.3</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <doclint>none</doclint>
              <quiet>true</quiet>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
